fixes #3 Headings and Alignment

--- a/src/typography.less
+++ b/src/typography.less
@@ -1,36 +1,121 @@
 // Headings
 //
-// Styling for headings
-//
-//    <h1>h1 heading</h1>
-//    <h2>h2 heading</h2>
-//    <h3>h3 heading</h3>
-//    <h4>h4 heading</h4>
-//    <h5>h5 heading</h5>
-//    <h6>h6 heading</h6>
+// Markup:
+// <h1>h1 Example heading</h1>
+// <h2>h2 Example heading</h2>
+// <h3>h3 Example heading</h3>
+// <h4>h4 Example heading</h4>
+// <h5>h5 Example heading</h5>
+// <h6>h6 Example heading</h6>
 //
 // Styleguide 2.1.
+h1, h2, h3, h4, h5, h6 {
+    font-family: @headings-font-family;
+    font-weight: @headings-font-weight;
+    line-height: @headings-line-height;
+    color: @headings-color;
+    margin-top: @line-height-computed;
+    margin-bottom: @line-height-computed;
+}
+
 h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+    font-size: @font-size-h1;
 }
-
 h2 {
-  font-size: 1.5em;
-  margin: 0.83em 0;
+    font-size: @font-size-h2;
 }
-
 h3 {
-  font-size: 1.17em;
-  margin: 1em 0;
+    font-size: @font-size-h3;
 }
-
 h4 {
-  font-size: 1em;
-  margin: 1.33em 0;
+    font-size: @font-size-h4;
+}
+h5 {
+    font-size: @font-size-h5;
+}
+h6 {
+    font-size: @font-size-h6;
 }
 
-h5 {
-  font-size: 0.83em;
-  margin: 1.67em 0;
+// Headings with a secondary text
+//
+// Markup:
+// <h1>h1. Example heading <small>Secondary text</small></h1>
+// <h2>h2. Example heading <small>Secondary text</small></h2>
+// <h3>h3. Example heading <small>Secondary text</small></h3>
+// <h4>h4. Example heading <small>Secondary text</small></h4>
+// <h5>h5. Example heading <small>Secondary text</small></h5>
+// <h6>h6. Example heading <small>Secondary text</small></h6>
+//
+// Styleguide 2.2
+h1, h2, h3, h4, h5, h6 {
+    small,
+    .small {
+        font-weight: normal;
+        line-height: 1;
+        color: @headings-small-color;
+        font-size: 65%;
+    }
 }
+
+// Alignment
+//
+// Markup:
+// <p class="text-left">Left aligned text.</p>
+// <p class="text-center">Center aligned text.</p>
+// <p class="text-right">Right aligned text.</p>
+// <p class="text-justify">Justified text.</p>
+//
+// Styleguide 2.3
+.text-left           { text-align: left; }
+.text-right          { text-align: right; }
+.text-center         { text-align: center; }
+.text-justify        { text-align: justify; }
+/*
+// Contextual colors
+.text-muted {
+    color: @text-muted;
+}
+.text-primary {
+    .text-emphasis-variant(@brand-primary);
+}
+.text-success {
+    .text-emphasis-variant(@state-success-text);
+}
+.text-info {
+    .text-emphasis-variant(@state-info-text);
+}
+.text-warning {
+    .text-emphasis-variant(@state-warning-text);
+}
+.text-danger {
+    .text-emphasis-variant(@state-danger-text);
+}
+
+// Contextual backgrounds
+// For now we'll leave these alongside the text classes until v4 when we can
+// safely shift things around (per SemVer rules).
+.bg-primary {
+    // Given the contrast here, this is the only class to have its color inverted
+    // automatically.
+    color: #fff;
+    .bg-variant(@brand-primary);
+}
+.bg-success {
+    .bg-variant(@state-success-bg);
+}
+.bg-info {
+    .bg-variant(@state-info-bg);
+}
+.bg-warning {
+    .bg-variant(@state-warning-bg);
+}
+.bg-danger {
+    .bg-variant(@state-danger-bg);
+}*/
+
+// Lists
+//
+// <ul>
+//     <li>...</li>
+// </ul>
